# zero_world

./: .env.example  .gitignore  AI_AGENT_ARCHITECTURE.md  AI_MEDIATOR_PHILOSOPHY.md  ARCHITECTURE_COMPLETE.md  CLEANUP_OCTOBER_15.md  CLEANUP_PLAN.md  CLEANUP_REPORT.md  CODE_STANDARDS.md  COMPLETE_SERVICES_UPDATE.md  CROSS_PLATFORM_SETUP.md  CROSS_PLATFORM_STATUS.md  CSP_ERROR_EXPLAINED.md  DEPLOYMENT_SUPER_APP.md  DIGITAL_IDENTITY_IMPLEMENTATION.md  DIGITAL_IDENTITY_SYSTEM.md  DIGITAL_IDENTITY_VISUAL.txt  ENTERPRISE_ARCHITECTURE.md  ENTERPRISE_TRANSFORMATION_COMPLETE.md  FINAL_CLEANUP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  PLATFORM_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REBUILD_SUMMARY.md  REPOSITORY_READY.md  SUPER_APP_OVERVIEW.md  SUPER_APP_VISUAL.txt  TODO_SUPER_APP.md  TRILLION_SCALE_ARCHITECTURE.md  UI_CUSTOMIZATION_GUIDE.md  WEB_APP_STATUS.md  WEB_PLATFORM_FIX.md  docker-compose.enterprise.yml  docker-compose.yml
.ai/: CORE_INSTRUCTIONS.md  README.md
ai-ml/: README.md
api-gateway/: README.md
backend/: Dockerfile  crud_examples.py  requirements.txt
compliance/: README.md
data-layer/: README.md
devops/: README.md
docs/: ANDROID_EMULATOR_TESTING.md  ARCHITECTURE.md  CSP_FIX_SUMMARY.md  FULL_DOCUMENTATION.md  (+13 more)
services/universal-connector/: .env.example  Cargo.toml  Dockerfile  README.md
services/universal-connector/src/: cache.rs  config.rs  main.rs  models.rs  orchestrator.rs
services/universal-connector/src/adapters/: google_search.rs  mod.rs  news_api.rs  openweather.rs  weather_api.rs  wikipedia.rs
(+205 files in other folders)
