[package]
name = "universal-connector"
version = "0.1.0"
edition = "2021"
authors = ["Zero World Team"]
description = "Universal data connector - The lungs of Zero World that breathe in data from 1000+ sources"

[dependencies]
# Web framework and HTTP client
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
async-trait = "0.1"
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Metrics
prometheus = "0.13"

# Rate limiting
governor = "0.6"

# Caching
moka = { version = "0.12", features = ["future"] }

# Concurrency
dashmap = "5.5"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# URL encoding
urlencoding = "2.1"

# System info
num_cpus = "1.16"

[dev-dependencies]
mockito = "1.2"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
